# LHN_AI

./: .gitignore  CMakeLists.txt  README.md  setup.py
examples/: cnn.py
experiments/: lensing.cpp
include/lhn/: LinearRegression.h  LogisticRegression.h
include/lhn/core/: optimizer.hpp
include/lhn/physics/autodiff/: dual.hpp
include/lhn/physics/lensing/: full_loss.hpp  gradient.hpp  kappa_models.hpp  laplacian.hpp  loss.hpp  poisson.hpp  potential.hpp
include/lhn/physics/nn/: grad.hpp  node.hpp  siren_layer.hpp  siren_layer_bp.hpp  siren_layer_physics.hpp  siren_layer_physics_avx.hpp  siren_mlp.hpp  siren_mlp_bp.hpp  siren_physics_net.hpp
include/lhn/physics/sampling/: lensing_sampler.hpp
include/lhn/physics/train/: batch_train.hpp  full_pinn_bp_trainer.hpp  physics_trainer.hpp  pinn_trainer.hpp  siren_bp_trainer.hpp  train_batch_poisson.hpp  trainer.hpp
lhn_AI/: __init__.py  physics.py
src/: LinearRegression.cpp  LogisticRegression.cpp  bindings.cpp  train_batch_poisson.cpp  train_lensing.cpp
tests/: benchmark_lensing.py  test1.py  test2.py  thau_kinh_hap_dan.py  utils.py
